lexer_parser/src/test/exempleFile/miniJaja/success/arrayNegative.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation des tableaux	*/
/************************/

class arrayNegative {

	main {
        int t[-16];

	}
}