lexer_parser/src/test/exempleFile/miniJaja/fail/arrayWrongName.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation des tableaux	*/
/************************/

class arrayWrongName {

	main {
        int 8[16];

	}
}